Added proto corr. guesser

--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.9)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -34,6 +26,8 @@
    "source": [
     "import pygame\n",
     "from mpmath import mp\n",
+    "import numpy as np\n",
+    "from scipy.stats import linregress\n",
     "import random\n",
     "import sys\n",
     "\n",
@@ -143,22 +137,80 @@
     "        \n",
     "        return subbutton_1, subbutton_2, subbutton_3\n",
     "\n",
+    "def generate_points_with_correlation(R, n_points=100):\n",
+    "    # Generate random x values\n",
+    "    x = np.random.randn(n_points)\n",
+    "    \n",
+    "    # Generate random noise\n",
+    "    noise = np.random.randn(n_points)\n",
+    "    \n",
+    "    # Generate y values that will have the desired correlation with x\n",
+    "    y = R * x + np.sqrt(1 - R**2) * noise\n",
+    "    \n",
+    "    return x, y\n",
+    "\n",
     "def Math_Game_Uno():\n",
     "    global running\n",
     "    math_game_uno = pygame.display.set_mode((0, 0), pygame.FULLSCREEN)\n",
     "    pygame.display.set_caption('Math uno')\n",
     "    clock = pygame.time.Clock()\n",
     "    fps = 60  # Set the desired frames per second\n",
-    "    button_pressed = False\n",
+    "\n",
+    "    # Define colors\n",
+    "    white = (255, 255, 255)\n",
+    "    black = (0, 0, 0)\n",
+    "    blue = (0, 0, 255)\n",
+    "    gray = (200, 200, 200)\n",
+    "\n",
+    "    # Define font\n",
+    "    font = pygame.font.Font(None, 36)\n",
+    "\n",
+    "    # Define input box\n",
+    "    input_box = pygame.Rect((width-500)-140, height-600, 140, 32)\n",
+    "    color_inactive = pygame.Color('gray64')\n",
+    "    color_active = pygame.Color('gray17')\n",
+    "    color = color_inactive\n",
+    "    active = False\n",
+    "    text = '0.'\n",
+    "\n",
+    "    R = random.randint(0, 100)/100\n",
+    "    # Generate the points\n",
+    "    x, y = generate_points_with_correlation(R)\n",
+    "\n",
+    "    # Define guess button\n",
+    "    guess_button = pygame.Rect(width-500, height-600, 100, 32)\n",
     "\n",
     "    while True:\n",
     "        math_game_uno.fill(white)\n",
     "        mouse_x, mouse_y = pygame.mouse.get_pos()\n",
+    "\n",
+    "        # Draw square outline of the graph around the middle of the window\n",
+    "        window_width, window_height = math_game_uno.get_size()\n",
+    "        graph_size = min(window_width, window_height) // 2\n",
+    "        graph_x = (window_width - graph_size) // 2 - 300\n",
+    "        graph_y = (window_height - graph_size) // 2\n",
+    "        pygame.draw.rect(math_game_uno, 'gray64', (graph_x, graph_y, graph_size, graph_size), 2)\n",
+    "        pygame.draw.line(math_game_uno, 'gray64', (graph_x, graph_y + graph_size // 2), (graph_x + graph_size, graph_y + graph_size // 2), 2)\n",
+    "        pygame.draw.line(math_game_uno, 'gray64', (graph_x + graph_size // 2, graph_y), (graph_x + graph_size // 2, graph_y + graph_size), 2)\n",
+    "        \n",
     "        dropdown_dynamics(math_game_uno, dropdown, home_button, close_button)\n",
-    "        \n",
-    "        button_checker = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
-    "        pygame.draw.rect(math_game_uno, black, button_checker,0, 30)\n",
-    "        \n",
+    "\n",
+    "        # Plot newly generated points\n",
+    "        plot_points_with_pygame(x, y, math_game_uno, graph_x, graph_y, graph_size)\n",
+    "\n",
+    "        # Draw input box\n",
+    "        txt_surface = font.render(text, True, color)\n",
+    "        input_box.w = max(200, txt_surface.get_width() + 10)\n",
+    "        math_game_uno.blit(txt_surface, (input_box.x + 5, input_box.y + 5))\n",
+    "        pygame.draw.rect(math_game_uno, color, input_box, 3)\n",
+    "\n",
+    "\n",
+    "\n",
+    "        # Draw guess button\n",
+    "        pygame.draw.rect(math_game_uno, blue, guess_button)\n",
+    "        guess_text = font.render(\"Guess\", True, white)\n",
+    "        guess_text_rect = guess_text.get_rect(center=guess_button.center)\n",
+    "        math_game_uno.blit(guess_text, guess_text_rect)\n",
     "\n",
     "        for event in pygame.event.get():\n",
     "            # Makes the dropdown_dynamics function work\n",
@@ -167,25 +219,63 @@
     "            if close_button.collidepoint(mouse_x,mouse_y) and event.type == pygame.MOUSEBUTTONDOWN:\n",
     "                running = False\n",
     "                return\n",
-    "            # From here you can fuck around ~~~~~~~~~~~\n",
     "            if event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
     "                return\n",
-    "            if button_checker.collidepoint(mouse_x,mouse_y) and event.type == pygame.MOUSEBUTTONDOWN:\n",
-    "                if button_pressed:\n",
-    "                    button_pressed = False\n",
+    "            \n",
+    "            # Primary code for the input box\n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "                if input_box.collidepoint(event.pos):\n",
+    "                    active = not active\n",
     "                else:\n",
-    "                    button_pressed = True\n",
+    "                    active = False\n",
+    "                color = color_active if active else color_inactive\n",
+    "                if guess_button.collidepoint(event.pos):\n",
+    "                    print(f\"Guess: {text}\")\n",
+    "            if event.type == pygame.KEYDOWN:\n",
+    "                if active:\n",
+    "                    if event.key == pygame.K_RETURN:\n",
+    "                        x, y = generate_points_with_correlation(float(text))\n",
+    "                        text = '0.'\n",
+    "                        active = not active\n",
+    "                        guessing = False\n",
+    "                    elif event.key == pygame.K_BACKSPACE:\n",
+    "                        text = text[:-1]\n",
+    "                    else:\n",
+    "                        text += event.unicode\n",
     "\n",
-    "        if button_pressed:\n",
-    "            text_math_check = font_2.render(\"Pressed\", True, white)\n",
-    "            text_math_check_2 = text_math_check.get_rect(center=button_checker.center)\n",
-    "            math_game_uno.blit(text_math_check, text_math_check_2)\n",
-    "        \n",
     "        pygame.display.flip()\n",
-    "\n",
     "        # Cap the frame rate to 60 fps\n",
     "        clock.tick(fps)\n",
     "\n",
+    "def plot_points_with_pygame(x, y, screen, graph_x, graph_y, graph_size):\n",
+    "    # Define colors\n",
+    "    black = (0, 0, 0)\n",
+    "    red = (255, 0, 0)\n",
+    "    \n",
+    "    # Scale the points to fit the screen\n",
+    "    x_scaled = (x - x.min()) / (x.max() - x.min()) * graph_size + graph_x\n",
+    "    y_scaled = height - (y - y.min()) / (y.max() - y.min()) * graph_size - graph_y\n",
+    "    \n",
+    "    # Calculate the regression line\n",
+    "    slope, intercept, r_value, p_value, std_err = linregress(x, y)\n",
+    "    x_min, x_max = x.min(), x.max()\n",
+    "    y_min = slope * x_min + intercept\n",
+    "    y_max = slope * x_max + intercept\n",
+    "    \n",
+    "    x_min_scaled = (x_min - x.min()) / (x.max() - x.min()) * graph_size + graph_x\n",
+    "    x_max_scaled = (x_max - x.min()) / (x.max() - x.min()) * graph_size + graph_x\n",
+    "    y_min_scaled = height - (y_min - y.min()) / (y.max() - y.min()) * graph_size - graph_y\n",
+    "    y_max_scaled = height - (y_max - y.min()) / (y.max() - y.min()) * graph_size - graph_y\n",
+    "       \n",
+    "    # Draw the points\n",
+    "    for i in range(len(x_scaled)):\n",
+    "        pygame.draw.circle(screen, black, (int(x_scaled[i]), int(y_scaled[i])), 3)\n",
+    "        \n",
+    "    # Draw the regression line\n",
+    "    pygame.draw.line(screen, red, (int(x_min_scaled), int(y_min_scaled)), (int(x_max_scaled), int(y_max_scaled)), 2)\n",
+    "        \n",
+    "    # Update the display\n",
+    "    pygame.display.flip()\n",
     "\n",
     "def Math_Game_Dos():\n",
     "    global running\n",
@@ -330,8 +420,6 @@
     "                if subbutton_chem_3 and subbutton_chem_3.collidepoint(mouse_x, mouse_y):\n",
     "                    Chem_Game_Tres()\n",
     "                \n",
-    "    \n",
-    "\n",
     "# Update the display\n",
     "    pygame.display.flip()\n",
     "\n",
@@ -341,62 +429,6 @@
     "# Quit Pygame\n",
     "pygame.quit()\n",
     "sys.exit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pygame\n",
-    "import sys\n",
-    "\n",
-    "# Initialize Pygame\n",
-    "pygame.init()\n",
-    "\n",
-    "# Constants\n",
-    "WINDOW_SIZE = (400, 300)\n",
-    "WHITE = (255, 255, 255)\n",
-    "BLUE = (0, 0, 255)\n",
-    "\n",
-    "# Set up the main window\n",
-    "main_window = pygame.display.set_mode(WINDOW_SIZE)\n",
-    "pygame.display.set_caption('Main Window')\n",
-    "\n",
-    "# Button properties\n",
-    "button_rect = pygame.Rect(150, 100, 100, 50)\n",
-    "\n",
-    "def open_new_window():\n",
-    "    new_window = pygame.display.set_mode(WINDOW_SIZE)\n",
-    "    pygame.display.set_caption('New Window')\n",
-    "\n",
-    "    while True:\n",
-    "        for event in pygame.event.get():\n",
-    "            if event.type == pygame.QUIT:\n",
-    "                pygame.quit()\n",
-    "                sys.exit()\n",
-    "            elif event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
-    "                return\n",
-    "\n",
-    "        new_window.fill(WHITE)\n",
-    "        pygame.display.update()\n",
-    "\n",
-    "# Main loop\n",
-    "running = True\n",
-    "while running:\n",
-    "    for event in pygame.event.get():\n",
-    "        if event.type == pygame.QUIT:\n",
-    "            running = False\n",
-    "        elif event.type == pygame.MOUSEBUTTONDOWN:\n",
-    "            if button_rect.collidepoint(event.pos):\n",
-    "                open_new_window()\n",
-    "\n",
-    "    main_window.fill(WHITE)\n",
-    "    pygame.draw.rect(main_window, BLUE, button_rect)\n",
-    "    pygame.display.flip()\n",
-    "\n",
-    "pygame.quit()\n"
    ]
   }
  ],
