--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -12,14 +12,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -193,7 +185,6 @@
     "        pygame.draw.line(math_game_uno, 'gray64', (graph_x, graph_y + graph_size // 2), (graph_x + graph_size, graph_y + graph_size // 2), 2)\n",
     "        pygame.draw.line(math_game_uno, 'gray64', (graph_x + graph_size // 2, graph_y), (graph_x + graph_size // 2, graph_y + graph_size), 2)\n",
     "        \n",
-    "        dropdown_dynamics(math_game_uno, dropdown, home_button, close_button)\n",
     "\n",
     "        # Plot newly generated points\n",
     "        plot_points_with_pygame(x, y, math_game_uno, graph_x, graph_y, graph_size)\n",
@@ -204,13 +195,13 @@
     "        math_game_uno.blit(txt_surface, (input_box.x + 5, input_box.y + 5))\n",
     "        pygame.draw.rect(math_game_uno, color, input_box, 3)\n",
     "\n",
-    "\n",
-    "\n",
     "        # Draw guess button\n",
     "        pygame.draw.rect(math_game_uno, blue, guess_button)\n",
     "        guess_text = font.render(\"Guess\", True, white)\n",
     "        guess_text_rect = guess_text.get_rect(center=guess_button.center)\n",
     "        math_game_uno.blit(guess_text, guess_text_rect)\n",
+    "\n",
+    "        dropdown_dynamics(math_game_uno, dropdown, home_button, close_button)\n",
     "\n",
     "        for event in pygame.event.get():\n",
     "            # Makes the dropdown_dynamics function work\n",
@@ -228,16 +219,23 @@
     "                    active = not active\n",
     "                else:\n",
     "                    active = False\n",
-    "                color = color_active if active else color_inactive\n",
     "                if guess_button.collidepoint(event.pos):\n",
-    "                    print(f\"Guess: {text}\")\n",
+    "                    x, y = generate_points_with_correlation(float(text))\n",
+    "                    text = '0.'\n",
+    "\n",
+    "            color = color_active if active else color_inactive\n",
+    "\n",
     "            if event.type == pygame.KEYDOWN:\n",
     "                if active:\n",
     "                    if event.key == pygame.K_RETURN:\n",
-    "                        x, y = generate_points_with_correlation(float(text))\n",
-    "                        text = '0.'\n",
-    "                        active = not active\n",
-    "                        guessing = False\n",
+    "                        if int(text[2:]) == int:\n",
+    "                            x, y = generate_points_with_correlation(float(text))\n",
+    "                            text = '0.'\n",
+    "                            active = False\n",
+    "                        else:\n",
+    "                            text = '0.'\n",
+    "                            active = False\n",
+    "                            \n",
     "                    elif event.key == pygame.K_BACKSPACE:\n",
     "                        text = text[:-1]\n",
     "                    else:\n",
@@ -273,9 +271,6 @@
     "        \n",
     "    # Draw the regression line\n",
     "    pygame.draw.line(screen, red, (int(x_min_scaled), int(y_min_scaled)), (int(x_max_scaled), int(y_max_scaled)), 2)\n",
-    "        \n",
-    "    # Update the display\n",
-    "    pygame.display.flip()\n",
     "\n",
     "def Math_Game_Dos():\n",
     "    global running\n",
@@ -430,6 +425,13 @@
     "pygame.quit()\n",
     "sys.exit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
