--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,16 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SystemExit",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.9)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "invalid rect assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 418\u001b[0m\n\u001b[0;32m    416\u001b[0m     running \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m    417\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m subbutton_math_1 \u001b[38;5;129;01mand\u001b[39;00m subbutton_math_1\u001b[38;5;241m.\u001b[39mcollidepoint(mouse_x, mouse_y):\n\u001b[1;32m--> 418\u001b[0m     \u001b[43mMath_Game_Uno\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    419\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m subbutton_math_2 \u001b[38;5;129;01mand\u001b[39;00m subbutton_math_2\u001b[38;5;241m.\u001b[39mcollidepoint(mouse_x, mouse_y):\n\u001b[0;32m    420\u001b[0m     Math_Game_Dos()\n",
+      "Cell \u001b[1;32mIn[1], line 205\u001b[0m, in \u001b[0;36mMath_Game_Uno\u001b[1;34m()\u001b[0m\n\u001b[0;32m    203\u001b[0m     pygame\u001b[38;5;241m.\u001b[39mdraw\u001b[38;5;241m.\u001b[39mrect(math_game_uno, gray, true_R_box)\n\u001b[0;32m    204\u001b[0m     true_R_text \u001b[38;5;241m=\u001b[39m font\u001b[38;5;241m.\u001b[39mrender(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrue R:  0.x\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m, black)\n\u001b[1;32m--> 205\u001b[0m     true_R_box_rect \u001b[38;5;241m=\u001b[39m \u001b[43mtrue_R_text\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_rect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mleft\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrue_R_box\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcenter\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    206\u001b[0m     math_game_uno\u001b[38;5;241m.\u001b[39mblit(true_R_text, true_R_box_rect)\n\u001b[0;32m    208\u001b[0m dropdown_dynamics(math_game_uno, dropdown, home_button, close_button)\n",
+      "\u001b[1;31mTypeError\u001b[0m: invalid rect assignment"
+     ]
+    },
+    {
+     "ename": "",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -171,6 +193,13 @@
     "\n",
     "    # Define guess button\n",
     "    guess_button = pygame.Rect(width-500, height-600, 100, 32)\n",
+    "    guessing = True\n",
+    "\n",
+    "    # Define result text\n",
+    "    true_R_box = pygame.Rect(width-700, height-550, 100, 32)\n",
+    "\n",
+    "    # Define next button\n",
+    "    next_button = pygame.Rect(width-700, height-600, 100, 32)\n",
     "\n",
     "    while True:\n",
     "        math_game_uno.fill(white)\n",
@@ -189,17 +218,32 @@
     "        # Plot newly generated points\n",
     "        plot_points_with_pygame(x, y, math_game_uno, graph_x, graph_y, graph_size)\n",
     "\n",
-    "        # Draw input box\n",
-    "        txt_surface = font.render(text, True, color)\n",
-    "        input_box.w = max(200, txt_surface.get_width() + 10)\n",
-    "        math_game_uno.blit(txt_surface, (input_box.x + 5, input_box.y + 5))\n",
-    "        pygame.draw.rect(math_game_uno, color, input_box, 3)\n",
+    "        \n",
     "\n",
-    "        # Draw guess button\n",
-    "        pygame.draw.rect(math_game_uno, blue, guess_button)\n",
-    "        guess_text = font.render(\"Guess\", True, white)\n",
-    "        guess_text_rect = guess_text.get_rect(center=guess_button.center)\n",
-    "        math_game_uno.blit(guess_text, guess_text_rect)\n",
+    "        if guessing:\n",
+    "            # Draw input box\n",
+    "            txt_surface = font.render(text, True, color)\n",
+    "            input_box.w = max(200, txt_surface.get_width() + 10)\n",
+    "            math_game_uno.blit(txt_surface, (input_box.x + 5, input_box.y + 5))\n",
+    "            pygame.draw.rect(math_game_uno, color, input_box, 3)\n",
+    "\n",
+    "            # Draw guess button\n",
+    "            pygame.draw.rect(math_game_uno, blue, guess_button)\n",
+    "            guess_text = font.render(\"Guess\", True, white)\n",
+    "            guess_text_rect = guess_text.get_rect(center=guess_button.center)\n",
+    "            math_game_uno.blit(guess_text, guess_text_rect)\n",
+    "        else:\n",
+    "            # next button\n",
+    "            pygame.draw.rect(math_game_uno, blue, next_button)\n",
+    "            next_text = font.render(\"Next\", True, white)\n",
+    "            next_text_rect = next_text.get_rect(center=next_button.center)\n",
+    "            math_game_uno.blit(next_text, next_text_rect)\n",
+    "\n",
+    "            # true R text button\n",
+    "            pygame.draw.rect(math_game_uno, gray, true_R_box)\n",
+    "            true_R_text = font.render(\"True R:  0.x\", True, black)\n",
+    "            true_R_box_rect = true_R_text.get_rect(left=true_R_box.center)\n",
+    "            math_game_uno.blit(true_R_text, true_R_box_rect)\n",
     "\n",
     "        dropdown_dynamics(math_game_uno, dropdown, home_button, close_button)\n",
     "\n",
@@ -213,29 +257,43 @@
     "            if event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
     "                return\n",
     "            \n",
-    "            # Primary code for the input box\n",
+    "            # Primary code for mouse interactions\n",
     "            if event.type == pygame.MOUSEBUTTONDOWN:\n",
     "                if input_box.collidepoint(event.pos):\n",
     "                    active = not active\n",
     "                else:\n",
     "                    active = False\n",
+    "                # INterraction with guess box\n",
     "                if guess_button.collidepoint(event.pos):\n",
-    "                    x, y = generate_points_with_correlation(float(text))\n",
+    "                    if text[2:].isdigit(): \n",
+    "                        guessing = False\n",
+    "                        #x, y = generate_points_with_correlation(float(text))\n",
+    "                        text = '0.'\n",
+    "                        active = False\n",
+    "                    else:\n",
+    "                        text = '0.'\n",
+    "                        active = False \n",
+    "                # Interaction with next button\n",
+    "                if next_button.collidepoint(event.pos):\n",
+    "                    R = random.randint(0, 100)/100\n",
+    "                    x, y = generate_points_with_correlation(R)\n",
+    "                    guessing = True\n",
     "                    text = '0.'\n",
+    "                    active = False\n",
     "\n",
     "            color = color_active if active else color_inactive\n",
     "\n",
     "            if event.type == pygame.KEYDOWN:\n",
     "                if active:\n",
     "                    if event.key == pygame.K_RETURN:\n",
-    "                        if int(text[2:]) == int:\n",
-    "                            x, y = generate_points_with_correlation(float(text))\n",
+    "                        if text[2:].isdigit():\n",
+    "                            guessing = False\n",
+    "                            #x, y = generate_points_with_correlation(float(text))\n",
     "                            text = '0.'\n",
     "                            active = False\n",
     "                        else:\n",
     "                            text = '0.'\n",
-    "                            active = False\n",
-    "                            \n",
+    "                            active = False                            \n",
     "                    elif event.key == pygame.K_BACKSPACE:\n",
     "                        text = text[:-1]\n",
     "                    else:\n",
@@ -389,8 +447,8 @@
     "    dropdown_dynamics(screen, dropdown, home_button, close_button)\n",
     "\n",
     "    subbutton_math_1, subbutton_math_2, subbutton_math_3 = button_dynamics(button_math, 'Math','Game 1','Game 2','Game 3')\n",
-    "    subbutton_eng_1, subbutton_eng_2, subbutton_eng_3 = button_dynamics(button_chem, 'Chemistry','Game 1','Game 2','Game 3')\n",
-    "    subbutton_chem_1, subbutton_chem_2, subbutton_chem_3 = button_dynamics(button_eng,'English','Game 1','Game 2','Game 3')\n",
+    "    subbutton_chem_1, subbutton_chem_2, subbutton_chem_3 = button_dynamics(button_chem, 'Chemistry','Game 1','Game 2','Game 3')\n",
+    "    subbutton_eng_1, subbutton_eng_2, subbutton_eng_3 = button_dynamics(button_eng,'English','Game 1','Game 2','Game 3')\n",
     "    \n",
     "    for event in pygame.event.get():\n",
     "        if event.type == pygame.MOUSEBUTTONDOWN:\n",
@@ -402,18 +460,18 @@
     "                    Math_Game_Dos()\n",
     "                if subbutton_math_3 and subbutton_math_3.collidepoint(mouse_x, mouse_y):\n",
     "                    Math_Game_Tres()\n",
-    "                if subbutton_eng_1 and subbutton_eng_1.collidepoint(mouse_x, mouse_y):\n",
-    "                    Eng_Game_Uno()\n",
-    "                if subbutton_eng_2 and subbutton_eng_2.collidepoint(mouse_x, mouse_y):\n",
-    "                    Eng_Game_Dos()\n",
-    "                if subbutton_eng_3 and subbutton_eng_3.collidepoint(mouse_x, mouse_y):\n",
-    "                    Eng_Game_Tres()\n",
     "                if subbutton_chem_1 and subbutton_chem_1.collidepoint(mouse_x, mouse_y):\n",
     "                    Chem_Game_Uno()\n",
     "                if subbutton_chem_2 and subbutton_chem_2.collidepoint(mouse_x, mouse_y):\n",
     "                    Chem_Game_Dos()\n",
     "                if subbutton_chem_3 and subbutton_chem_3.collidepoint(mouse_x, mouse_y):\n",
     "                    Chem_Game_Tres()\n",
+    "                if subbutton_eng_1 and subbutton_eng_1.collidepoint(mouse_x, mouse_y):\n",
+    "                    Eng_Game_Uno()\n",
+    "                if subbutton_eng_2 and subbutton_eng_2.collidepoint(mouse_x, mouse_y):\n",
+    "                    Eng_Game_Dos()\n",
+    "                if subbutton_eng_3 and subbutton_eng_3.collidepoint(mouse_x, mouse_y):\n",
+    "                    Eng_Game_Tres()\n",
     "                \n",
     "# Update the display\n",
     "    pygame.display.flip()\n",
@@ -428,10 +486,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting matplotlib\n",
+      "  Downloading matplotlib-3.10.1-cp311-cp311-win_amd64.whl.metadata (11 kB)\n",
+      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
+      "  Downloading contourpy-1.3.1-cp311-cp311-win_amd64.whl.metadata (5.4 kB)\n",
+      "Collecting cycler>=0.10 (from matplotlib)\n",
+      "  Downloading cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
+      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
+      "  Downloading fonttools-4.56.0-cp311-cp311-win_amd64.whl.metadata (103 kB)\n",
+      "     ---------------------------------------- 0.0/104.0 kB ? eta -:--:--\n",
+      "     ----------- --------------------------- 30.7/104.0 kB 1.4 MB/s eta 0:00:01\n",
+      "     -------------------------------------- 104.0/104.0 kB 2.0 MB/s eta 0:00:00\n",
+      "Collecting kiwisolver>=1.3.1 (from matplotlib)\n",
+      "  Downloading kiwisolver-1.4.8-cp311-cp311-win_amd64.whl.metadata (6.3 kB)\n",
+      "Requirement already satisfied: numpy>=1.23 in c:\\users\\kjaer\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib) (2.2.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\kjaer\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib) (24.2)\n",
+      "Collecting pillow>=8 (from matplotlib)\n",
+      "  Downloading pillow-11.1.0-cp311-cp311-win_amd64.whl.metadata (9.3 kB)\n",
+      "Collecting pyparsing>=2.3.1 (from matplotlib)\n",
+      "  Downloading pyparsing-3.2.1-py3-none-any.whl.metadata (5.0 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\kjaer\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\kjaer\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
+      "Downloading matplotlib-3.10.1-cp311-cp311-win_amd64.whl (8.1 MB)\n",
+      "   ---------------------------------------- 0.0/8.1 MB ? eta -:--:--\n",
+      "   -- ------------------------------------- 0.5/8.1 MB 10.0 MB/s eta 0:00:01\n",
+      "   ------ --------------------------------- 1.2/8.1 MB 13.1 MB/s eta 0:00:01\n",
+      "   --------- ------------------------------ 2.0/8.1 MB 14.0 MB/s eta 0:00:01\n",
+      "   ------------- -------------------------- 2.6/8.1 MB 14.0 MB/s eta 0:00:01\n",
+      "   ----------------- ---------------------- 3.5/8.1 MB 14.8 MB/s eta 0:00:01\n",
+      "   -------------------- ------------------- 4.1/8.1 MB 14.7 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 5.0/8.1 MB 15.1 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 5.8/8.1 MB 15.4 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 6.6/8.1 MB 15.5 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 7.5/8.1 MB 15.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  8.1/8.1 MB 15.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 8.1/8.1 MB 15.2 MB/s eta 0:00:00\n",
+      "Downloading contourpy-1.3.1-cp311-cp311-win_amd64.whl (219 kB)\n",
+      "   ---------------------------------------- 0.0/219.8 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 219.8/219.8 kB 6.8 MB/s eta 0:00:00\n",
+      "Downloading cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
+      "Downloading fonttools-4.56.0-cp311-cp311-win_amd64.whl (2.2 MB)\n",
+      "   ---------------------------------------- 0.0/2.2 MB ? eta -:--:--\n",
+      "   ------------ --------------------------- 0.7/2.2 MB 14.4 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 1.5/2.2 MB 16.0 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  2.2/2.2 MB 17.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 2.2/2.2 MB 15.5 MB/s eta 0:00:00\n",
+      "Downloading kiwisolver-1.4.8-cp311-cp311-win_amd64.whl (71 kB)\n",
+      "   ---------------------------------------- 0.0/72.0 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 72.0/72.0 kB ? eta 0:00:00\n",
+      "Downloading pillow-11.1.0-cp311-cp311-win_amd64.whl (2.6 MB)\n",
+      "   ---------------------------------------- 0.0/2.6 MB ? eta -:--:--\n",
+      "   ------------ --------------------------- 0.8/2.6 MB 17.0 MB/s eta 0:00:01\n",
+      "   --------------------- ------------------ 1.4/2.6 MB 15.0 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 2.2/2.6 MB 15.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 2.6/2.6 MB 15.2 MB/s eta 0:00:00\n",
+      "Downloading pyparsing-3.2.1-py3-none-any.whl (107 kB)\n",
+      "   ---------------------------------------- 0.0/107.7 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 107.7/107.7 kB ? eta 0:00:00\n",
+      "Installing collected packages: pyparsing, pillow, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
+      "Successfully installed contourpy-1.3.1 cycler-0.12.1 fonttools-4.56.0 kiwisolver-1.4.8 matplotlib-3.10.1 pillow-11.1.0 pyparsing-3.2.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.0.1\n",
+      "[notice] To update, run: C:\\Users\\kjaer\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install matplotlib"
+   ]
   }
  ],
  "metadata": {
