--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fail\n",
+      "fail\n"
+     ]
+    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -12,6 +20,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -136,7 +152,7 @@
     "    # Generate random noise\n",
     "    noise = np.random.randn(n_points)\n",
     "    \n",
-    "    # Generate y values that will have the desired correlation with x\n",
+    "    # Generate y values that will have the correct correlation with x\n",
     "    y = R * x + np.sqrt(1 - R**2) * noise\n",
     "    \n",
     "    return x, y\n",
@@ -220,22 +236,28 @@
     "                else:\n",
     "                    active = False\n",
     "                if guess_button.collidepoint(event.pos):\n",
-    "                    x, y = generate_points_with_correlation(float(text))\n",
-    "                    text = '0.'\n",
+    "                    try:\n",
+    "                        x, y = generate_points_with_correlation(float(text))\n",
+    "                        text = '0.'\n",
+    "                        active = False\n",
+    "                    except:\n",
+    "                        print(\"fail\")\n",
+    "                        text = '0.'\n",
+    "                        active = False\n",
     "\n",
     "            color = color_active if active else color_inactive\n",
     "\n",
     "            if event.type == pygame.KEYDOWN:\n",
     "                if active:\n",
     "                    if event.key == pygame.K_RETURN:\n",
-    "                        if int(text[2:]) == int:\n",
+    "                        try:\n",
     "                            x, y = generate_points_with_correlation(float(text))\n",
     "                            text = '0.'\n",
     "                            active = False\n",
-    "                        else:\n",
+    "                        except:\n",
+    "                            print(\"fail\")\n",
     "                            text = '0.'\n",
     "                            active = False\n",
-    "                            \n",
     "                    elif event.key == pygame.K_BACKSPACE:\n",
     "                        text = text[:-1]\n",
     "                    else:\n",
@@ -425,13 +447,6 @@
     "pygame.quit()\n",
     "sys.exit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
