Fuck around and find out

--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fail\n",
-      "fail\n"
-     ]
-    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -20,14 +12,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -174,19 +158,30 @@
     "    font = pygame.font.Font(None, 36)\n",
     "\n",
     "    # Define input box\n",
-    "    input_box = pygame.Rect((width-500)-140, height-600, 140, 32)\n",
+    "    input_box = pygame.Rect(width-640, height-600, 140, 32)\n",
     "    color_inactive = pygame.Color('gray64')\n",
     "    color_active = pygame.Color('gray17')\n",
     "    color = color_inactive\n",
     "    active = False\n",
     "    text = '0.'\n",
     "\n",
+    "    # Initialize the correlation coefficient\n",
     "    R = random.randint(0, 100)/100\n",
     "    # Generate the points\n",
     "    x, y = generate_points_with_correlation(R)\n",
     "\n",
     "    # Define guess button\n",
+    "    guessing = True\n",
     "    guess_button = pygame.Rect(width-500, height-600, 100, 32)\n",
+    "    # Define next button\n",
+    "    next_button = pygame.Rect(width-640, height-600, 120, 32)\n",
+    "    # Define True R box \n",
+    "    true_R_box = pygame.Rect(width-640, height-550, 120, 32)\n",
+    "    # Define Guessed R box\n",
+    "    guessed_R_box = pygame.Rect(width-640, height-500, 120, 32)\n",
+    "    # Define difference box\n",
+    "    difference_box = pygame.Rect(width-640, height-450, 120, 32)\n",
+    "\n",
     "\n",
     "    while True:\n",
     "        math_game_uno.fill(white)\n",
@@ -205,17 +200,42 @@
     "        # Plot newly generated points\n",
     "        plot_points_with_pygame(x, y, math_game_uno, graph_x, graph_y, graph_size)\n",
     "\n",
-    "        # Draw input box\n",
-    "        txt_surface = font.render(text, True, color)\n",
-    "        input_box.w = max(200, txt_surface.get_width() + 10)\n",
-    "        math_game_uno.blit(txt_surface, (input_box.x + 5, input_box.y + 5))\n",
-    "        pygame.draw.rect(math_game_uno, color, input_box, 3)\n",
+    "        if guessing:\n",
+    "            # Draw input box\n",
+    "            pygame.draw.rect(math_game_uno, color, input_box, 3)\n",
+    "            txt_surface = font.render(text, True, color)\n",
+    "            input_box.w = max(200, txt_surface.get_width() + 10)\n",
+    "            math_game_uno.blit(txt_surface, (input_box.x + 5, input_box.y + 5))\n",
     "\n",
-    "        # Draw guess button\n",
-    "        pygame.draw.rect(math_game_uno, blue, guess_button)\n",
-    "        guess_text = font.render(\"Guess\", True, white)\n",
-    "        guess_text_rect = guess_text.get_rect(center=guess_button.center)\n",
-    "        math_game_uno.blit(guess_text, guess_text_rect)\n",
+    "            # Draw guess button\n",
+    "            pygame.draw.rect(math_game_uno, blue, guess_button)\n",
+    "            guess_text = font.render(\"Guess\", True, white)\n",
+    "            guess_text_rect = guess_text.get_rect(center=guess_button.center)\n",
+    "            math_game_uno.blit(guess_text, guess_text_rect)\n",
+    "        else:\n",
+    "            # Draw next button\n",
+    "            pygame.draw.rect(math_game_uno, blue, next_button)\n",
+    "            next_text = font.render(\"Next\", True, white)\n",
+    "            next_text_rect = next_text.get_rect(center=next_button.center)\n",
+    "            math_game_uno.blit(next_text, next_text_rect)\n",
+    "\n",
+    "            # Draw True R box\n",
+    "            pygame.draw.rect(math_game_uno, white, true_R_box)\n",
+    "            true_R_text = font.render(\"True R: \" + str(R), True, black)\n",
+    "            true_R_text_rect = true_R_text.get_rect(center=true_R_box.center)\n",
+    "            math_game_uno.blit(true_R_text, true_R_text_rect)\n",
+    "\n",
+    "            # Draw Guessed R box\n",
+    "            pygame.draw.rect(math_game_uno, white, guessed_R_box)\n",
+    "            guessed_R_text = font.render(\"Guessed R: \"+ str(text), True, black)\n",
+    "            guessed_R_text_rect = guessed_R_text.get_rect(center=guessed_R_box.center)\n",
+    "            math_game_uno.blit(guessed_R_text, guessed_R_text_rect)\n",
+    "\n",
+    "            # Draw difference box\n",
+    "            pygame.draw.rect(math_game_uno, white, difference_box)\n",
+    "            difference_text = font.render(\"Difference: \"+ str(abs(R - float(text)))[:4], True, black)\n",
+    "            difference_text_rect = difference_text.get_rect(center=difference_box.center)\n",
+    "            math_game_uno.blit(difference_text, difference_text_rect)\n",
     "\n",
     "        dropdown_dynamics(math_game_uno, dropdown, home_button, close_button)\n",
     "\n",
@@ -230,16 +250,21 @@
     "                return\n",
     "            \n",
     "            # Primary code for the input box\n",
-    "            if event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN and guessing:\n",
     "                if input_box.collidepoint(event.pos):\n",
     "                    active = not active\n",
     "                else:\n",
     "                    active = False\n",
+    "\n",
     "                if guess_button.collidepoint(event.pos):\n",
     "                    try:\n",
-    "                        x, y = generate_points_with_correlation(float(text))\n",
-    "                        text = '0.'\n",
-    "                        active = False\n",
+    "                        if float(text) <= 1:\n",
+    "                            x, y = generate_points_with_correlation(float(text))\n",
+    "                            active = False\n",
+    "                            guessing = False\n",
+    "                        else:\n",
+    "                            text = '0.'\n",
+    "                            active = False\n",
     "                    except:\n",
     "                        print(\"fail\")\n",
     "                        text = '0.'\n",
@@ -247,21 +272,32 @@
     "\n",
     "            color = color_active if active else color_inactive\n",
     "\n",
-    "            if event.type == pygame.KEYDOWN:\n",
-    "                if active:\n",
-    "                    if event.key == pygame.K_RETURN:\n",
-    "                        try:\n",
-    "                            x, y = generate_points_with_correlation(float(text))\n",
+    "            if event.type == pygame.KEYDOWN and active:\n",
+    "                if event.key == pygame.K_RETURN:\n",
+    "                    try:\n",
+    "                        if float(text) <= 1:\n",
+    "                            active = False\n",
+    "                            guessing = False\n",
+    "                        else:\n",
     "                            text = '0.'\n",
     "                            active = False\n",
-    "                        except:\n",
-    "                            print(\"fail\")\n",
-    "                            text = '0.'\n",
-    "                            active = False\n",
-    "                    elif event.key == pygame.K_BACKSPACE:\n",
-    "                        text = text[:-1]\n",
-    "                    else:\n",
-    "                        text += event.unicode\n",
+    "                    except:\n",
+    "                        print(\"fail\")\n",
+    "                        text = '0.'\n",
+    "                        active = False\n",
+    "                elif event.key == pygame.K_BACKSPACE:\n",
+    "                    text = text[:-1]\n",
+    "                else:\n",
+    "                    text += event.unicode\n",
+    "            \n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN and not guessing:\n",
+    "                if next_button.collidepoint(event.pos):\n",
+    "                    R = random.randint(0, 100)/100\n",
+    "                    x, y = generate_points_with_correlation(R)\n",
+    "\n",
+    "                    guessing = True\n",
+    "                    text = '0.'\n",
+    "                    active = False\n",
     "\n",
     "        pygame.display.flip()\n",
     "        # Cap the frame rate to 60 fps\n",
