--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -12,6 +12,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -152,7 +160,7 @@
     "    white = (255, 255, 255)\n",
     "    black = (0, 0, 0)\n",
     "    blue = (0, 0, 255)\n",
-    "    gray = (200, 200, 200)\n",
+    "    red = (255, 0, 0)\n",
     "\n",
     "    # Define font\n",
     "    font = pygame.font.Font(None, 36)\n",
@@ -181,7 +189,11 @@
     "    guessed_R_box = pygame.Rect(width-640, height-500, 120, 32)\n",
     "    # Define difference box\n",
     "    difference_box = pygame.Rect(width-640, height-450, 120, 32)\n",
+    "    # Define points box\n",
+    "    points_box = pygame.Rect(width-1330, height-720, 120, 32)\n",
+    "    current_points = 0\n",
     "\n",
+    "    life_slots = 3\n",
     "\n",
     "    while True:\n",
     "        math_game_uno.fill(white)\n",
@@ -199,6 +211,19 @@
     "\n",
     "        # Plot newly generated points\n",
     "        plot_points_with_pygame(x, y, math_game_uno, graph_x, graph_y, graph_size)\n",
+    "\n",
+    "        # Draw the points box\n",
+    "        pygame.draw.rect(math_game_uno, white, points_box)\n",
+    "        points_text = font.render(\"Points: \"+ str(current_points), True, black)\n",
+    "        points_text_rect = points_text.get_rect(center=points_box.center)\n",
+    "        math_game_uno.blit(points_text, points_text_rect)\n",
+    "\n",
+    "        # Draw life slots\n",
+    "        slot_width = 50\n",
+    "        slot_height = 20\n",
+    "        for i in range(3):\n",
+    "            color_box = red if i < life_slots else black\n",
+    "            pygame.draw.rect(math_game_uno, color_box, (width-1350 + i * slot_width + slot_width // 2, height-770, slot_width - 10, slot_height))\n",
     "\n",
     "        if guessing:\n",
     "            # Draw input box\n",
@@ -259,9 +284,12 @@
     "                if guess_button.collidepoint(event.pos):\n",
     "                    try:\n",
     "                        if float(text) <= 1:\n",
-    "                            x, y = generate_points_with_correlation(float(text))\n",
     "                            active = False\n",
     "                            guessing = False\n",
+    "                            if abs(R - float(text)) < 0.1:\n",
+    "                                current_points += 1\n",
+    "                            else:\n",
+    "                                life_slots -= 1\n",
     "                        else:\n",
     "                            text = '0.'\n",
     "                            active = False\n",
@@ -278,6 +306,10 @@
     "                        if float(text) <= 1:\n",
     "                            active = False\n",
     "                            guessing = False\n",
+    "                            if abs(R - float(text)) < 0.1:\n",
+    "                                current_points += 1\n",
+    "                            else:\n",
+    "                                life_slots -= 1\n",
     "                        else:\n",
     "                            text = '0.'\n",
     "                            active = False\n",
@@ -482,6 +514,65 @@
     "# Quit Pygame\n",
     "pygame.quit()\n",
     "sys.exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pygame\n",
+    "import sys\n",
+    "\n",
+    "# Initialize pygame\n",
+    "pygame.init()\n",
+    "\n",
+    "# Set up display\n",
+    "width, height = 300, 100\n",
+    "window = pygame.display.set_mode((width, height))\n",
+    "pygame.display.set_caption(\"Life Box\")\n",
+    "# Define colors\n",
+    "WHITE = (255, 255, 255)\n",
+    "RED = (255, 0, 0)\n",
+    "BLACK = (0, 0, 0)\n",
+    "\n",
+    "# Define life slots\n",
+    "life_slots = 3\n",
+    "\n",
+    "def draw_life_box(window, life_slots):\n",
+    "    # Fill the background with white\n",
+    "    window.fill(WHITE)\n",
+    "\n",
+    "    # Draw life slots\n",
+    "    slot_width = 50\n",
+    "    slot_height = 20\n",
+    "    for i in range(3):\n",
+    "        color = RED if i < life_slots else BLACK\n",
+    "        pygame.draw.rect(window, color, (50 + i * (slot_width + 10), 50, slot_width, slot_height))\n",
+    "\n",
+    "    # Update the display\n",
+    "    pygame.display.flip()\n",
+    "\n",
+    "# Main loop\n",
+    "running = True\n",
+    "while running:\n",
+    "    for event in pygame.event.get():\n",
+    "        if event.type == pygame.QUIT:\n",
+    "            running = False\n",
+    "\n",
+    "    # Decrease life slots for demonstration purposes\n",
+    "    if life_slots > 0:\n",
+    "        life_slots -= 1\n",
+    "\n",
+    "    # Draw the life box\n",
+    "    draw_life_box(window, life_slots)\n",
+    "\n",
+    "    # Delay to visualize the decrease in life slots\n",
+    "    pygame.time.delay(1000)\n",
+    "\n",
+    "# Quit pygame\n",
+    "pygame.quit()"
    ]
   }
  ],
