--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -37,6 +37,8 @@
     "white = (255, 255, 255)\n",
     "gray = (211, 211, 211)\n",
     "black = (0, 0, 0)\n",
+    "blue = (0,0,255)\n",
+    "red = (255,0,0)\n",
     "\n",
     "#Font\n",
     "font = pygame.font.Font(None,32)\n",
@@ -279,7 +281,7 @@
     "    clock = pygame.time.Clock()\n",
     "    fps = 60  # Set the desired frames per second\n",
     "\n",
-    "    text = font_2.render(\"3.\", True, white)\n",
+    "    text = font_2.render(\"Choose a constant\", True, white)\n",
     "    n=3\n",
     "    \n",
     "    numberkeys ={\n",
@@ -291,21 +293,32 @@
     "            pygame.K_6: \"6\",\n",
     "            pygame.K_7: \"7\",\n",
     "            pygame.K_8: \"8\",\n",
-    "            pygame.K_9: \"9\"\n",
+    "            pygame.K_9: \"9\",\n",
+    "            pygame.K_0: \"0\"\n",
     "        }\n",
+    "    \n",
+    "    constants ={\n",
+    "        \"π\": \"3.14159265358979323846264338327950288419716939937510582097494459230781640628620899862803482534211706798214808651328230664709384460955058223172535940812848111745028410270193852110555964462294895493038196\",\n",
+    "        \"e\": \"2.71828182845904523536028747135266249775724709369995957496696762772407663035354759457138217852516642742746639193200305992181741359662904357290033429526059563073813232862794349076323382988075319525101901\",\n",
+    "        \"φ\": \"1.61803398874989484820458683436563811772030917980576286213544862270526046281890244970720720418939113748475408807538689175212663386222353693179318006076672635443338908659593958290563832266131992829026788\",\n",
+    "        \"√2\": \"1.41421356237309504880168872420969807856967187537694807317667973799073247846210703885038753432764157273501384623091229702492483605585073721264412149709993583141322266592750559275579995050115278206057147\",\n",
+    "        \"ln(2)\": \"0.69314718055994530941723212145817656807550013436025525412068000949339362196969471560586332699641868754200148102057068573368552023575813055703267075163507596193072757082837143519030703862389167347112335\" \n",
+    "    }\n",
+    "\n",
+    "    rects = []\n",
+    "\n",
+    "    for i in range(5):\n",
+    "        x = 2*i*(width/15) + width/5\n",
+    "\n",
+    "        rects.append((pygame.Rect(x,50,width/15,width/15),blue))\n",
     "\n",
     "    while True:\n",
     "        math_game_dos.fill(white)\n",
     "        mouse_x, mouse_y = pygame.mouse.get_pos()\n",
     "        dropdown_dynamics(math_game_dos, dropdown, home_button, close_button)\n",
     "        \n",
-    "        button_checker = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "        button_checker = pygame.Rect(width/2-100, height/2-100, 400, 200)\n",
     "        pygame.draw.rect(math_game_dos, black, button_checker,0, 30)\n",
-    "\n",
-    "        mp.dps = n + 2\n",
-    "        pi = str(mp.pi)\n",
-    "        pi_n = pi[n-1:n]\n",
-    "\n",
     "\n",
     "        for event in pygame.event.get():\n",
     "            # Makes the dropdown_dynamics function work\n",
@@ -316,15 +329,40 @@
     "                return\n",
     "            if event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
     "                return\n",
+    "\n",
     "            # From here you can fuck around ~~~~~~~~~~~\n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "                for i in range(len(rects)):\n",
+    "                    rect, color = rects[i]\n",
+    "                    if rects[i][0].collidepoint(mouse_x,mouse_y):\n",
+    "                        rects[i] = (rect,red)\n",
+    "                        number = list(constants.values())[i]\n",
+    "                        constant = list(constants.keys())[i]\n",
+    "                        n = 3\n",
+    "                        text = font_2.render(number[:n-1], True, white)\n",
+    "                        for j in range(len(rects)):\n",
+    "                            if j!= i:\n",
+    "                                rects[j]= (rects[j][0],blue)\n",
+    "            \n",
     "            if event.type == pygame.KEYDOWN:\n",
     "                if event.key in numberkeys:\n",
-    "                    if numberkeys[event.key] == pi_n:\n",
-    "                        text = font_2.render(str(pi[:n]), True, white)\n",
+    "                    if numberkeys[event.key] == number[n-1]:\n",
+    "                        text = font_2.render(number[:n], True, white)\n",
     "                        n += 1\n",
-    "        \n",
+    "                    else:\n",
+    "                        text = font_2.render(f\"You've correctly {n-3} decimals of {constant}\", True, white)\n",
+    "\n",
     "        text_math_2 = text.get_rect(center=button_checker.center)\n",
     "        math_game_dos.blit(text, text_math_2)\n",
+    "        \n",
+    "        for i in range(len(rects)):\n",
+    "            rect, color = rects[i]\n",
+    "            pygame.draw.rect(screen, color, rect)\n",
+    "\n",
+    "            label = list(constants.keys())[i]\n",
+    "            text_surface = font.render(label, True, (white))\n",
+    "            text_rect = text_surface.get_rect(center=rect.center)\n",
+    "            screen.blit(text_surface, text_rect) \n",
     "        \n",
     "        pygame.display.flip()\n",
     "        pygame.display.update()\n",
@@ -436,7 +474,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -450,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
