--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
     "from mpmath import mp\n",
@@ -306,19 +296,37 @@
     "    }\n",
     "\n",
     "    rects = []\n",
+    "    number_rects = []\n",
     "\n",
     "    for i in range(5):\n",
     "        x = 2*i*(width/15) + width/5\n",
-    "\n",
     "        rects.append((pygame.Rect(x,50,width/15,width/15),blue))\n",
+    "    \n",
+    "    box_width = width // 10\n",
+    "    box_height = width // 10\n",
+    "    spacing = width // 40\n",
+    "    start_x = (width - (8 * box_width + 7 * spacing)) // 2  # center the boxes\n",
+    "    y = 3 * height // 4\n",
+    "    \n",
+    "    for i in range(8):\n",
+    "        x = start_x + i * (box_width + spacing)\n",
+    "        rect = pygame.Rect(x, y, box_width, box_height)\n",
+    "        number_rects.append((rect, \"\"))\n",
+    "    \n",
+    "    constant_running = False\n",
+    "    locked_out = False\n",
     "\n",
     "    while True:\n",
     "        math_game_dos.fill(white)\n",
     "        mouse_x, mouse_y = pygame.mouse.get_pos()\n",
     "        dropdown_dynamics(math_game_dos, dropdown, home_button, close_button)\n",
     "        \n",
-    "        button_checker = pygame.Rect(width/2-100, height/2-100, 400, 200)\n",
-    "        pygame.draw.rect(math_game_dos, black, button_checker,0, 30)\n",
+    "        Game_text_box = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "        if not constant_running:\n",
+    "            text_start = font_2.render(\"Choose a constant to start game\", True, black)\n",
+    "            text_start_2 = text_start.get_rect(center=Game_text_box.center)\n",
+    "            math_game_dos.blit(text_start, text_start_2)\n",
+    "\n",
     "\n",
     "        for event in pygame.event.get():\n",
     "            # Makes the dropdown_dynamics function work\n",
@@ -339,30 +347,67 @@
     "                        number = list(constants.values())[i]\n",
     "                        constant = list(constants.keys())[i]\n",
     "                        n = 3\n",
-    "                        text = font_2.render(number[:n-1], True, white)\n",
+    "                        number_rects = []\n",
+    "                        for k in range(8):\n",
+    "                            x = start_x + k * (box_width + spacing)\n",
+    "                            rect = pygame.Rect(x, y, box_width, box_height)\n",
+    "                            number_rects.append((rect, \"\"))\n",
+    "    \n",
+    "                        number_rects[-2] = (number_rects[-2][0], number[0])\n",
+    "                        number_rects[-1] = (number_rects[-1][0], number[1])\n",
+    "                            \n",
     "                        for j in range(len(rects)):\n",
     "                            if j!= i:\n",
     "                                rects[j]= (rects[j][0],blue)\n",
+    "                        constant_running = True\n",
     "            \n",
     "            if event.type == pygame.KEYDOWN:\n",
-    "                if event.key in numberkeys:\n",
-    "                    if numberkeys[event.key] == number[n-1]:\n",
-    "                        text = font_2.render(number[:n], True, white)\n",
+    "                if event.key in numberkeys and constant_running:\n",
+    "                    if numberkeys[event.key] == number[n-1] and not locked_out:\n",
+    "                        for i in range(len(number_rects) - 1):\n",
+    "                            number_rect = number_rects[i][0]\n",
+    "                            next_text = number_rects[i + 1][1]\n",
+    "                            number_rects[i] = (number_rect, next_text)\n",
+    "                            \n",
+    "                            if len(number_rects) < 8:\n",
+    "                                for k in range(len(number_rects)):\n",
+    "                                    number_rects[k][0].x += box_width\n",
+    "                                new_rect = pygame.Rect(number_rects[0][0].x - box_width - spacing, y, box_width, box_height)\n",
+    "                                number_rects.insert(0,(new_rect, \"\"))\n",
+    "\n",
+    "                        # Update the last one with the new digit\n",
+    "                        last_index = len(number_rects) - 1\n",
+    "                        number_rect = number_rects[last_index][0]\n",
+    "                        number_text = number[n-1]\n",
+    "                        number_rects[last_index] = (number_rect, number_text)\n",
+    "\n",
     "                        n += 1\n",
     "                    else:\n",
-    "                        text = font_2.render(f\"You've correctly {n-3} decimals of {constant}\", True, white)\n",
+    "                        locked_out = True\n",
+    "        \n",
+    "        for i in range(len(number_rects) - 1, -1, -1): # Itererer bagfra\n",
+    "            number_rect, number_text = number_rects[i]\n",
+    "            pygame.draw.rect(math_game_dos, black, number_rect)\n",
+    "            text = font_2.render(number_text, True, white)\n",
+    "            text_math_2 = text.get_rect(center=number_rect.center)\n",
+    "            math_game_dos.blit(text, text_math_2)\n",
+    "            if constant_running:\n",
+    "                number_rect.x -= 5\n",
+    "                if number_rect.x < -box_width:\n",
+    "                    number_rects.pop(i)\n",
+    "                \n",
+    "                if len(number_rects) == 0:\n",
+    "                    constant_running = False\n",
     "\n",
-    "        text_math_2 = text.get_rect(center=button_checker.center)\n",
-    "        math_game_dos.blit(text, text_math_2)\n",
     "        \n",
     "        for i in range(len(rects)):\n",
     "            rect, color = rects[i]\n",
-    "            pygame.draw.rect(screen, color, rect)\n",
+    "            pygame.draw.rect(math_game_dos, color, rect)\n",
     "\n",
     "            label = list(constants.keys())[i]\n",
     "            text_surface = font.render(label, True, (white))\n",
     "            text_rect = text_surface.get_rect(center=rect.center)\n",
-    "            screen.blit(text_surface, text_rect) \n",
+    "            math_game_dos.blit(text_surface, text_rect) \n",
     "        \n",
     "        pygame.display.flip()\n",
     "        pygame.display.update()\n",
